--- a/dotcore/nodes.conf
+++ b/dotcore/nodes.conf
@@ -6,4 +6,4 @@
 4 { mdr         mdr.gif           mdr.gif           {zebra OSPFv3MDR IPForward}                netns       {built-in type for wireless routers} }
 5 { prouter     router_green.gif  router_green.gif  {zebra OSPFv2 OSPFv3 IPForward}            physical    {built-in type for physical nodes} }
 6 { OVS         lanswitch.gif     lanswitch.gif     {DefaultRoute SSH OvsService}              OVS         {} }
-7 { dtnhost     host.gif          host.gif          {DTN7}                                     netns       {type for DTN hosts} }
+7 { dtnhost     host.gif          host.gif          {dtn7-go}                                  netns       {type for DTN hosts} }
