--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install additional dependencies
       run: |
         apt-get update
-        apt-get install -y nodejs
+        apt-get install -y nodejs psmisc git
 
     - name: Set up Go
       uses: actions/setup-go@v2
@@ -28,7 +28,7 @@ jobs:
         go-version: '^1.16'
 
     - name: Check out code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v2.3.4
       with: 
         submodules: recursive
 
