--- a/dotcore/nodes.conf
+++ b/dotcore/nodes.conf
@@ -7,6 +7,4 @@
 5 { prouter       router_green.gif  router_green.gif  {zebra OSPFv2 OSPFv3 IPForward}            physical    {built-in type for physical nodes} }
 6 { OVS           lanswitch.gif     lanswitch.gif     {DefaultRoute SSH OvsService}              OVS         {} }
 7 { dtnhost       host.gif          host.gif          {dtn7-go}                                  netns       {generic dtn7-go hosts} }
-8 { dtn_sn_sensor sensor.gif        sensor.gif        {dtn7-go-sensor}                           netns       {dtn7-go based sensors for sensor networks} }
-9 { dtn_sn_mule   mule.gif          mule.gif          {dtn7-go-mule}                             netns       {dtn7-go based mule for sensor networks} }
-10 { dtn_sn_server host.gif          host.gif          {dtn7-go-server}                           netns       {dtn7-go based server for sensor networks} }
+8 { dtn_sensor    sensor.gif        sensor.gif        {dtn7-go TrafficGenerator}                 netns       {dtn7-go based sensors for sensor networks} }
