--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -15,6 +15,8 @@ jobs:
     container: 
       image: maciresearch/core_worker:7.5.1-1
       options: --privileged
+      volumes:
+        - /lib/modules/:/lib/modules/
 
     steps:
     - name: Install additional dependencies
